2011-12-25  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Add testcase for belief combination.

	* src/mcs/NewBeliefState.cpp: Add combination of 2 NewBeliefStates.
	* include/mcs/NewBeliefState.h: Likewise.

2011-12-23  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Add testBridgeRuleEvaluation.cpp.
	* src/mcs/Makefile.am: Add BridgeRuleEvaluator.cpp.
	* include/mcs/Makefile.am: Add BridgeRuleEvaluator.h.

	* include/mcs/BridgeRuleEvaluator.h: New file.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.
	* testsuite/testBridgeRuleEvaluation.cpp: Likewise.

	* testsuite/testTables.cpp: Check for table size.

	* testsuite/testID.cpp: Add copyright info.

	* include/mcs/Table.h: Fix including Logger.h.

	* include/mcs/ID.h (posLiteralFromBelief): Force NAF bit to 0.

	* include/mcs/BridgeRuleTable.h: Clean up.

2011-12-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/QueryID.h: New file.
	* src/mcs/QueryID.cpp: Likewise.

2011-12-16  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testBeliefState.cpp: Update testSendingBeliefState.
	* testsuite/BeliefStateServer.h: Likewise
	* testsuite/BeliefStateServer.cpp: Likewise.
	* testsuite/BeliefStateClient.h: Likewise.
	* testsuite/BeliefStateClient.cpp: Likewise.
	* testsuite/Makefile.am: Likewise.

	* src/mcs/NewBeliefState.cpp: New file.

	* src/mcs/Makefile.am (libmcs_a_SOURCES): Add NewBeliefState.cpp

	* inclde/mcs/NewBeliefState: Fix load & save methods.

2011-12-14  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/NewBeliefState.h: New file.

	* include/mcs/Makefile.am: Add BridgeRule.h and BridgeRuleTable.h

	* testsuite/testTables.cpp: Add testBridgeRuleTable.

	* include/mcs/ID.h: Add methods to create belief literals from
	ID of beliefs.

	* include/mcs/BridgeRule.h: Add struct BridgeRule.

2011-12-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testTables.cpp: Finalize testBeliefTable.

	* testsuite/Makefile.am: Add testTables.
